// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Exenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses Added
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with the provided expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Exenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={500}
      createdAt={0}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={100}
      createdAt={-345600000}
      description="Groceries"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={50}
      createdAt={345600000}
      description="Entertainment"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
